--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "onnxscript>=0.5.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
+    "soundfile>=0.13.1",
     "torch>=2.9.1",
     "torchaudio>=2.9.1",
     "torchvision>=0.24.1",
