--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "funasr-onnx>=0.4.1",
     "modelscope>=1.11.1",
     "onnxscript>=0.5.0",
+    "openai>=2.8.1",
+    "python-dotenv>=1.2.1",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
     "soundfile>=0.13.1",
