--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "torch>=2.9.1",
     "torchaudio>=2.9.1",
     "torchvision>=0.24.1",
+    "transformers>=4.57.3",
     "uvicorn>=0.38.0",
     "websockets>=15.0.1",
 ]
