--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "modelscope>=1.11.1",
     "onnxscript>=0.5.0",
     "openai>=2.8.1",
+    "opencc-python-reimplemented>=0.1.7",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
